--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ i.material-icons:hover {
 	width: 30px;
 	height: 30px;
 }
-#show-toolbar {
+#showToolbar {
 	position: fixed;
 	bottom: 0;
 	left: 0;
