--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ canvas, i.material-icons, input, .swatch {
 	0px 2px 1px rgba(0, 0, 0, 0.5);*/
 	display: inline-block;
 	margin-left: 10px;
+	margin-top: 5px;
 }
 .swatch:hover {
 	border: 2px solid #999;
@@ -87,10 +88,6 @@ div {
 }
 
 @media(max-width: 480px), (max-height: 480px) {
-	i.material-icons {
-		width: 25px;
-		height: 25px;
-	}
 }
 @media print {
 	#toolbar {
